--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -335,9 +335,7 @@
     <string name="permission_explanation_text">Substratum may not function as expected without these
         few crucial permissions granted.\n\n<b>Storage: </b> Substratum needs to utilize your
         internal storage to store your system rescue archives, located in
-        /storage/emulated/0/substratum/.\n\n<b>Firebase: </b>
-        Substratum utilizes Google\'s Firebase to download crucial information from our
-        centralized real-time database to improve core services and security enhancements.
+        /storage/emulated/0/substratum/.
     </string>
 
     <string name="priority_back_title">Back to overlays</string>
